# websocket-chat-test

chat-qt/: CMakeLists.txt  WsClient.cpp  WsClient.h  connectdialog.cpp  connectdialog.h  connectdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
chat-server/: go.mod  main.go
